syntax = "proto3";

package comment.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/comment";

import "google/protobuf/timestamp.proto";

message Comment {
  int32 comment_id = 1;
  int32 root = 2;
  int32 parent = 3;
  int32 dialog = 4;
  int64 user_id = 5;
  int64 creation_id = 6;
  google.protobuf.Timestamp created_at = 7;

  string content = 8;
  string media = 9;
}

message CommentArea {
  enum Status {
    DEFAULT = 0;
    HIDING = 1;
    CLOSED = 3;
  }
  int64 creation_id = 1;
  int32 total_comments = 2;
  Status area_status = 3;
}

message AnyComment{
  repeated Comment any_comment = 1;
}

message AnyCommentArea{
  repeated CommentArea any_comment_area = 1;
}